	PR target/54073 	* config/i386/i386.md (mov<mode>cc): Use comparison_operator 	instead of ordered_comparison_operator resp. 	ix86_fp_comparison_operator predicates. 	* config/i386/i386.c (ix86_expand_fp_movcc): Reject TImode 	or for -m32 DImode comparisons.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@193554 138bc75d-0d04-0410-961f-82ee72b054a4